--- a/api-rest/properties/dbConection.yml
+++ b/api-rest/properties/dbConection.yml
@@ -1,5 +1,5 @@
 conecction:
-  -host: "localhost",
-  -user: "root",
-  -password: "123456789",
-  -database: "sistemacelulares"
+    host: "localhost"
+    user: "root"
+    password: "root"
+    database: "sistemacelulares"
